@@ -28,17 +28,19 @@ import org.apache.hadoop.hbase.client.Connection;
 import org.apache.yetus.audience.InterfaceAudience;
 
 @InterfaceAudience.Private
-public class BackupClientFactory {
+public final class BackupClientFactory {
+  private BackupClientFactory() {
+  }
 
-  public static TableBackupClient create (Connection conn, String backupId, BackupRequest request)
-    throws IOException
-  {
+  public static TableBackupClient create(Connection conn, String backupId, BackupRequest request)
+    throws IOException {
     Configuration conf = conn.getConfiguration();
     try {
       String clsName = conf.get(TableBackupClient.BACKUP_CLIENT_IMPL_CLASS);
       if (clsName != null) {
-        Class<?> clientImpl = Class.forName(clsName);
-        TableBackupClient client = (TableBackupClient) clientImpl.newInstance();
+        Class<? extends TableBackupClient> clientImpl;
+        clientImpl = Class.forName(clsName).asSubclass(TableBackupClient.class);
+        TableBackupClient client = clientImpl.getDeclaredConstructor().newInstance();
         client.init(conn, backupId, request);
         return client;
       }
